# varcomp

./: CHANGELOG.md  README.md  varcomp.cabal
src/Variadic/: Composition.hs
test/: Spec.hs
