cabal-version:       2.2

name:                varcomp
version:             0.1.0.0
synopsis:            Variadic function composition
description:         Variadic function composition done via the (.**.) operator
homepage:            https://github.com/axionbuster/varcomp#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              "buster"
maintainer:          "axionbuster@gmail.com"
copyright:           2024 "buster"
category:            Data
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Variadic.Composition
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses, FlexibleInstances
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite varcomp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , varcomp
                     , hspec >= 2.7.1
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  default-language:    Haskell2010
  default-extensions:  MultiParamTypeClasses, FlexibleInstances

source-repository head
  type:     git
  location: https://github.com/axionbuster/varcomp
